--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>RayBestStar</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="min-h-screen bg-gray-100 flex items-center justify-center">
+    <div id="root" class="w-full max-w-md"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
