--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RayBestStar</title>
   </head>
-  <body class="min-h-screen bg-gray-100 flex items-center justify-center">
-    <div id="root" class="w-full max-w-md"></div>
+  <body class="min-h-screen bg-gray-100">
+    <div id="root" class="w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
