--- a/public/architecture.html
+++ b/public/architecture.html
@@ -31,24 +31,25 @@
 <h1>Project Architecture</h1>
 
 <div class="tree">
-raybeststar/
-├── Dockerfile
-├── docker-compose.yml
-├── nginx.conf
-├── certs/
-├── dist/
-├── package.json
-├── postcss.config.cjs
-├── tailwind.config.js
-├── vite.config.js
-├── public/
-└── src/
-    ├── components/
-    │   ├── TopBar.tsx
-    │   └── MessageForm.tsx
-    ├── App.jsx
-    ├── index.css
-    └── main.jsx
+📁 raybeststar
+├── 📄 Dockerfile
+├── 📄 docker-compose.yml
+├── 📄 nginx.conf
+├── 📁 certs
+│   └── 📄 README.md
+├── 📁 dist
+│   └── 📄 .gitkeep
+├── 📁 public
+│   ├── 📄 favicon.ico
+│   └── 📄 robots.txt
+└── 📁 src
+    ├── 📁 components
+    │   ├── 📄 TopBar.tsx
+    │   └── 📄 MessageForm.tsx
+    ├── 📄 App.jsx
+    ├── 📄 index.css
+    └── 📄 main.jsx
+
 </div>
 
 <!-- 这里是引用svg图片 -->
