--- a/public/architecture.html
+++ b/public/architecture.html
@@ -32,23 +32,24 @@
 
 <div class="tree">
 📁 raybeststar
-├── 📄 Dockerfile
-├── 📄 docker-compose.yml
-├── 📄 nginx.conf
-├── 📁 certs
-│   └── 📄 README.md
-├── 📁 dist
-│   └── 📄 .gitkeep
-├── 📁 public
-│   ├── 📄 favicon.ico
-│   └── 📄 robots.txt
-└── 📁 src
-    ├── 📁 components
-    │   ├── 📄 TopBar.tsx
-    │   └── 📄 MessageForm.tsx
-    ├── 📄 App.jsx
-    ├── 📄 index.css
-    └── 📄 main.jsx
+├─ 📄 Dockerfile
+├─ 📄 docker-compose.yml
+├─ 📄 nginx.conf
+├─ 📁 certs
+├─ 📁 dist
+├─ 📄 package.json
+├─ 📄 postcss.config.cjs
+├─ 📄 tailwind.config.js
+├─ 📄 vite.config.js
+├─ 📁 public
+└─ 📁 src
+   ├─ 📁 components
+   │  ├─ 📄 TopBar.tsx
+   │  └─ 📄 MessageForm.tsx
+   ├─ 📄 App.jsx
+   ├─ 📄 index.css
+   └─ 📄 main.jsx
+
 
 </div>
 
